# rust-build-optimizer

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Make.md  Makefile  README.md  clippy.toml  deny.toml  rustfmt.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
benches/: optimization_bench.rs
docs/: WORKFLOWS.md
src/: config.rs  error.rs  main.rs  system.rs  utils.rs
src/commands/: build.rs  config.rs  development.rs  initialize.rs  mod.rs  optimize.rs  status.rs  tools.rs  update.rs
