[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Austin Songer <austin@songer.me>"]
description = "A comprehensive Rust build optimization tool that dramatically improves build times and development workflow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/austinsonger/atlas"
homepage = "https://github.com/austinsonger/atlas"
documentation = "https://docs.rs/atlas"
readme = "README.md"
keywords = ["rust", "build", "optimization", "performance", "cargo"]
categories = ["development-tools", "development-tools::build-utils", "command-line-utilities"]
exclude = ["target/", ".git/", "*.log", ".github/", "tests/fixtures/"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
which = "4.4"
tempfile = "3.8"
toml = "0.8"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# Benchmarks
[[bench]]
name = "optimization_bench"
harness = false

# Profile optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true

[profile.test]
debug = true

# Features
[features]
default = []
# Add features as needed

# Workspace configuration for potential future expansion
[workspace]
members = ["."]

# Metadata for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Metadata for cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
